Modify deprecated use of bean.getClass().newInstance()